feat: API auth upadate profile & password
